--- a/WebLab23/wwwroot/Register.html
+++ b/WebLab23/wwwroot/Register.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <title>Register</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
     <style>
         .msg-error {
             color: red;
@@ -14,26 +21,63 @@
     </style>
 </head>
 <body>
-    <a href="index.html">Основная страница</a>
-    <h2>Регистрация нового пользователя</h2>
-    <div class="msg-error">
-        <div id="msg"></div>
-        <ul id="formError"></ul>
+
+    <ul class="nav justify-content-end">
+        <li class="nav-item">
+            <a class="nav-link active" href="index.html">На главную</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="arts.html">Медиатека</a>
+        </li>
+    </ul>
+
+    <p><img src="images/5635672.png" alt="Письма мастера дзен" width="100%"></p>
+
+    <h3 align="center">Регистрация нового пользователя</h3>
+
+    <div class="row parent">
+        <div class="col-sm-4">
+        </div>
+        <div class="col-sm-4 text-center">
+
+            <div class="msg-error">
+                <div id="msg"></div>
+                <ul id="formError"></ul>
+            </div>
+
+            <div class="msgClass container" align="center">
+                <!--<div id="msgAuth"></div>-->
+                <div id="msg"></div>
+                <ul id="formError"></ul>
+            </div>
+
+            <form>
+                <label for="email">Email: </label>
+                <br />
+                <input type="text" id="email" name="email">
+                <br />
+                <label for="password">Пароль: </label>
+                <br />
+                <input type="password" id="password" name="password">
+                <br />
+                <label for="passwordConfirm">Подтверждение пароля: </label>
+                <br />
+                <input type="password" id="passwordConfirm" name="passwordConfirm">
+            </form>
+            <br>
+            <button class="btn btn-dark btn-lg" id="registerBtn">Регистрация</button>
+            <br>
+            <br>
+            <form action="arts.html">
+                <button type="submit" class="btn btn-secondary btn-lg btn-block">Медиатека</button>
+            </form>
+        </div>
+        <div class="col-sm-4">
+        </div>
     </div>
-    <form>
-        <label for="email">Email: </label>
-        <br />
-        <input type="text" id="email" name="email">
-        <br />
-        <label for="password">Пароль: </label>
-        <br />
-        <input type="password" id="password" name="password">
-        <br />
-        <label for="passwordConfirm">Подтверждение пароля: </label>
-        <br />
-        <input type="password" id="passwordConfirm" name="passwordConfirm">
-    </form>
-    <button id="registerBtn">Регистрация</button>
+    <br />
+
+    
 
     <script src="js/register.js"></script>
 </body>
