--- a/WebLab23/wwwroot/arts.html
+++ b/WebLab23/wwwroot/arts.html
@@ -25,9 +25,6 @@
             <a class="nav-link active" href="index.html">На главную</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="arts.html">Медиатека</a>
-        </li>
-        <li class="nav-item">
             <a class="nav-link" href="Posts.html">Мой список</a>
         </li>
         <li class="nav-item">
@@ -37,19 +34,20 @@
     </ul>
 
     <p><img src="images/5635672.png" alt="Письма мастера дзен" width="100%"></p>
-    <h2 align="center">Книги, фильмы, мультфильмы и сериалы в одном месте!</h2>
-
-    <div id="actionMsg" class="msgClass"></div>
-    <div class="msgClass">
-        <div id="msgAuth"></div>
-        <div id="msg"></div>
-        <ul id="formError"></ul>
-    </div>
+    <h2 align="center">Книги, фильмы, мультфильмы и сериалы в одном месте!</h2>    
 
     <div class="row parent">
         <div class="col-sm-3">
         </div>
         <div class="col-sm-6 text-center">
+
+            <div id="actionMsg" class="msgClass"></div>
+            <div class="msgClass">
+                <div id="msgAuth"></div>
+                <div id="msg"></div>
+                <ul id="formError"></ul>
+            </div>
+
             <div id="editDiv">
                 <h3>Редактирование</h3>
                 <form>
@@ -79,7 +77,7 @@
     </div>
 
     <div>
-        <div id="artsDiv">Что-то пошло не так...</div>
+        <div id="artsDiv">Ой! Что-то пошло не так...</div>
     </div>
 
     <div class="row parent">
