--- a/WebLab23/wwwroot/index.html
+++ b/WebLab23/wwwroot/index.html
@@ -19,9 +19,6 @@
 <body>
     <ul class="nav justify-content-end">
         <li class="nav-item">
-            <a class="nav-link active" href="index.html">На главную</a>
-        </li>
-        <li class="nav-item">
             <a class="nav-link" href="arts.html">Медиатека</a>
         </li>
         <li class="nav-item">
@@ -31,7 +28,7 @@
 
     <p><img src="images/5635672.png" alt="Письма мастера дзен" width="100%"></p>
     <div class=" container-fluid" width="100%">
-        <h2 align="center">Для тех, кто навести в голове порядок</h2>
+        <h2 align="center">Для тех, кто хочет навести в голове порядок</h2>
     </div>
 
     <h4 align="center">Вход для зарегистрированных пользователей</h4>
