--- a/WebLab23/wwwroot/index.html
+++ b/WebLab23/wwwroot/index.html
@@ -24,6 +24,9 @@
         <li class="nav-item">
             <a class="nav-link" href="Posts.html">Мой список</a>
         </li>
+        <li class="nav-item">
+            <div id="xuser"></div>
+        </li>
     </ul>
 
     <p><img src="images/5635672.png" alt="Письма мастера дзен" width="100%"></p>
