--- a/WebLab23/wwwroot/arts.html
+++ b/WebLab23/wwwroot/arts.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>База произведений</title>
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
@@ -10,12 +11,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
 
-    <style>
-        .div-bord {
-            border-radius: 10px;
-            border: 1px solid #7a7b7e;
-        }
-    </style>
 </head>
 
 <body>
@@ -28,8 +23,7 @@
             <a class="nav-link" href="Posts.html">Мой список</a>
         </li>
         <li class="nav-item">
-            <div id="xuser">Что-то пошло не так...</div>
-            
+            <div id="xuser"></div>            
         </li>
     </ul>
 
